# FinancialPlanner

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
FinancialPlanner/: CMakeLists.txt  Core.h  FinancialPlanner.cpp  FinancialPlanner.h  FinancialPlanner.hpp  IncomeExpenses.h  Settings.hpp  Tab.cpp  imgui.ini  main.cpp
FinancialPlanner/Core/: Backend.cpp  Backend.h  Backend.hpp  CMakeLists.txt  Core.cpp  Core.h  Core.hpp
FinancialPlanner/Core/Backend/: Backend.cpp  Backend.hpp  CMakeLists.txt  Transaction.hpp
FinancialPlanner/Database/: CMakeLists.txt  accounts.json  accountsDetails.json  categories.json  incomeExpenses.json  netWorth.json
FinancialPlanner/Tabs/: AssetAllocation.cpp  AssetAllocation.h  AssetAllocation.hpp  CMakeLists.txt  FIRE.cpp  FIRE.h  FIRE.hpp  Forecasting.cpp  Forecasting.h  Forecasting.hpp  IncomeExpenses.cpp  IncomeExpenses.h  IncomeExpenses.hpp  Investments.cpp  Investments.h  Investments.hpp  Manager.cpp  Manager.hpp  NetWorth.cpp  NetWorth.h  NetWorth.hpp  Overview.cpp  Overview.h  Overview.hpp  Plotter.cpp  Plotter.h
FinancialPlanner/Templates/: CMakeLists.txt  Tab.cpp  Tab.h  Tab.hpp
FinancialPlanner/Utility/: CMakeLists.txt  Colors.hpp  CustomSort.cpp  CustomSort.h  CustomSort.hpp  CustomTime.cpp  CustomTime.hpp  Custom_Widgets.cpp  Custom_Widgets.h  Custom_Widgets.hpp  Plotter.cpp  Plotter.h  Plotter.hpp  StyleAndTheme.cpp  StyleAndTheme.hpp  Utility.cpp  Utility.h  Utility.hpp  namespace_declarations.hpp
FinancialPlanner/assets/fonts/: config.json
FinancialPlanner/src/: CMakeLists.txt  Core.cpp  FinancialPlanner.h  NetWorth.h
FinancialPlanner/src/Tabs/: IncomeExpenses.h
demos/: imgui_implot_demos.cpp  jsoncpp_demo.cpp
deployment/v0.3.1/linux_debpkg_v_0_3_1/: install.sh
deployment/v0.3.1/linux_debpkg_v_0_3_1/stagedir/DEBIAN/: control
deployment/v0.3.1/linux_debpkg_v_0_3_1/stagedir/usr/share/applications/: financialplanner.desktop
deployment/v0.3.1/linux_debpkg_v_0_3_1/stagedir/usr/share/doc/: copyright
deployment/v0.3.1/linux_debpkg_v_0_3_1/stagedir/usr/share/financialplanner/: imgui.ini
deployment/v0.3.1/linux_debpkg_v_0_3_1/usr/share/: imgui.ini
deployment/v0.3.1/linux_debpkg_v_0_3_1/usr/share/applications/: financialplanner.desktop
deployment/v0.3.2/linux_debpkg_v_0_3_2/: install.sh
deployment/v0.3.2/linux_debpkg_v_0_3_2/stagedir/DEBIAN/: control
deployment/v0.3.2/linux_debpkg_v_0_3_2/stagedir/usr/share/financialplanner/resources/database/: incomeExpenses.json
resources/: CMakeLists.txt
resources/database/: accounts.json  test.json  transactions.json
